feat: remova all swagger marks
